--- a/lit/tex4ht-t4ht.tex
+++ b/lit/tex4ht-t4ht.tex
@@ -1,7 +1,7 @@
 % $Id$
 % tex tex4ht-t4ht   or   ht tex tex4ht-t4ht
 %
-% Copyright 2009-2010 TeX Users Group
+% Copyright 2009-2012 TeX Users Group
 % Copyright (C) 1998-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -144,7 +144,7 @@ while( eoln_ch != EOF ) {
 
 \<t4ht.c\><<<
 /* t4ht.c (`version), generated from `jobname.tex
-   Copyright (C) 2009-2010 TeX Users Group
+   Copyright (C) 2009-2012 TeX Users Group
    Copyright (C) `CopyYear.1998. Eitan M. Gurari
 `<TeX4ht copyright`> 
 */
@@ -1000,7 +1000,7 @@ seems a pity not to enable it for its companion program too.
 
 \<kpathsea arg 0\><<<
 #ifdef KPATHSEA
-   kpse_set_program_name (argv[0], NULL);
+   kpse_set_program_name (argv[0], "tex4ht");
 #endif
 >>>
 
@@ -3554,10 +3554,10 @@ defines F_OK in DJGPP'.
 \<main's vars\><<<
 Q_CHAR * tex4ht_env_file = (Q_CHAR *) 0;
 Q_CHAR * dos_env_file =
-#if defined(DOS_WIN32) || defined(__MSDOS__)
+#if defined(__MSDOS__)
   `<get dos env file`>;
 #endif
-#if !defined(DOS_WIN32) && !defined(__MSDOS__)
+#if !defined(__MSDOS__)
   (Q_CHAR *) 0;
 #endif
 
@@ -3573,7 +3573,7 @@ get_env_dir(argv[0])
 >>>
 
 \<functions\><<<
-#if defined(DOS_WIN32) || defined(__MSDOS__)
+#if defined(__MSDOS__)
 `<get tex4ht.env in dos`>
 #endif
 >>>
@@ -3790,7 +3790,11 @@ mode ("rb"), which results in strange line endings in the .lg file
 #define READ_BIN_FLAGS "rb"
 #define READ_TEXT_FLAGS "r"
 #define WRITE_BIN_FLAGS "wb"
+#ifdef WIN32
+#define WRITE_TEXT_FLAGS "wb"
+#else
 #define WRITE_TEXT_FLAGS "w"
+#endif
 #else
 #define READ_BIN_FLAGS "r"
 #define READ_TEXT_FLAGS "r"
@@ -3955,9 +3959,6 @@ static const C_CHAR *warn_err_mssg[]={ `<warn and err messages`> "" };
       }
     }
  
-    for (i=0; i < argc; i++)
-      free (argv[i]);
-    free (argv);
     nargv[nargc] = NULL;
     argv = nargv;
     argc = nargc;
